logs/quiz_errors.log
[2025-10-24T16:52:47.147755] Error submitting quiz 7 by user GQ3367
Traceback (most recent call last):
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\quizzes\views.py", line 74, in submit_quiz
    return render(request, 'quizzes/quiz_result.html', {
        'quiz': quiz,
    ...<4 lines>...
        'responses': responses
    })
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ~~~~~~~~~~~~^^
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\loader_tags.py", line 293, in do_extends
    nodelist = parser.parse()
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\loader_tags.py", line 232, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 484, in parse
    raise self.error(token, e)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 482, in parse
    filter_expression = self.compile_filter(token.contents)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 600, in compile_filter
    return FilterExpression(token, self)
  File "C:\Users\ahmad\OneDrive\Desktop\projects\online-tutorial-quiz-system\venv\Lib\site-packages\django\template\base.py", line 673, in __init__
    raise TemplateSyntaxError(
    ...<2 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Could not parse some characters: |(score||floatformat:2)|floatformat:0

--------------------------------------------------------------------------------
